# px

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: client-release.yml  px-release.yml
apps/tauri-ui/: index.html  package-lock.json  package.json
apps/tauri-ui/src/: main.ts  style.css
apps/tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-ui/src-tauri/config/: client.toml  server-cert.pem
apps/tauri-ui/src-tauri/icons/: icon.icns
apps/tauri-ui/src-tauri/src/: main.rs
config/: client.prod.example.toml  client.windows.prod.example.toml  server.prod.example.toml  server.toml
crates/px-bench/: Cargo.toml
crates/px-bench/src/: main.rs
crates/px-dns-helper/: Cargo.toml
crates/px-dns-helper/src/: main.rs
crates/px-proto/: Cargo.toml
crates/px-proto/src/: lib.rs
crates/px-runtime/: Cargo.toml
crates/px-runtime/src/: ingress.rs  lib.rs  session.rs  (+3 more)
crates/px-server/: Cargo.toml
crates/px-server/src/: main.rs  session.rs  target.rs
deploy/: bootstrap-vps.sh  generate-vps-cert.sh  install-server.sh  setup-vps.sh  update-vps.sh
deploy/systemd/: px-server.service
docs/: benchmark.md  client-packaging.md  protocol.md  quickstart.md  rocky9-deploy.md  tun-helper-design.md
helpers/px-tun-helper/: README.md  go.mod  go.sum
scripts/: _generate-cert.sh  create-client-prod-config.ps1  create-client-prod-config.sh  fetch-server-cert.ps1  fetch-server-cert.sh  fetch-tun-helper.ps1  fetch-tun-helper.sh  generate-cert.sh  generate-dev-cert.sh  generate-tauri-icon.py  install-dev-px-tun-helper.sh  macos-tun-helper.sh  open-macos-app.sh  package-release.sh  repair-tun-helper.ps1  run-bench.sh  run-browser-bench.sh  run-server.sh  smoke-test.sh  start-gui-dev.sh  start-gui.bat  start-gui.ps1  start-gui.sh  upload-server.sh
(+8 files in other folders)
