[package]
name = "tauri-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
toml.workspace = true
px-proto = { path = "../../../crates/px-proto" }
px-runtime = { path = "../../../crates/px-runtime" }
